jakob-lingel/jakob-lingel-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: jakob-lingel-app
  name: jakob-lingel-app
  namespace: jakob-lingel
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jakob-lingel-app
      app: jakob-lingel-app
  template:
    metadata:
      labels:
        io.kompose.service: jakob-lingel-app
        app: jakob-lingel-app
    spec:
      containers:
        - image: ghcr.io/davidcode2/jakob-lingel:1.0.25
          name: jakob-lingel-app
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 8080
      restartPolicy: Always
