jakob-lingel/jakob-lingel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jakob-lingel-app-service
  namespace: jakob-lingel
spec:
  # This makes the service only reachable from within the cluster
  # The ingress controller will talk to it.
  type: ClusterIP
  ports:
    - name: http
      port: 80 # The port the service will be available on
      targetPort: 8080 
  selector:
    # This MUST match the labels on your pods in 'jakob-lingel-app-deployment.yaml'
    # Check your deployment's spec.template.metadata.labels
    app: jakob-lingel-app
