jakob-lingel/jakob-lingel-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jakob-lingel-ingress
  namespace: jakob-lingel
  annotations:
    # We use a sync-wave to ensure this resource is only applied
    # *after* the service it depends on has been created by ArgoCD.
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # This tells the NGINX controller to manage this Ingress
  ingressClassName: nginx
  rules:
    - host: "portfolio.jakob-lingel.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jakob-lingel-app-service
                port:
                  # This must match the 'port' (not targetPort) from the Service
                  number: 80
    - host: "www.portfolio.jakob-lingel.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jakob-lingel-app-service
                port:
                  # This must match the 'port' (not targetPort) from the Service
                  number: 80
  tls:
  - hosts:
      - "portfolio.jakob-lingel.dev"
      - "www.portfolio.jakob-lingel.dev"
    secretName: jakob-lingel-tls
