jakob-lingel/jakob-lingel-personal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jakob-lingel-personal
  namespace: jakob-lingel
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.jakob-lingel.dev/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.jakob-lingel.dev/oauth2/start?rd=$scheme://$http_host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Forwarded-User,X-Forwarded-Groups,X-Forwarded-Email"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portfolio.jakob-lingel.dev
      secretName: jakob-lingel-tls
  rules:
    - host: portfolio.jakob-lingel.dev
      http:
        paths:
          - path: /personal
            pathType: Prefix
            backend:
              service:
                name: jakob-lingel-app-service
                port:
                  number: 80
